--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -46,8 +47,13 @@ build/
 ### Scala ###
 .bsp/
 
+### PostgreSQL ###
+postgres-data
+
 ### Minio ###
 minio-data
 
 ### Hadoop ###
 hadoop
+
+/data
