--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,12 +70,29 @@ services:
     ports:
       - '9000:9000'  # Changed from 9000 to avoid HDFS conflict
       - '9001:9001'
-    #   volumes:
-    #     - ./minio-data:/data
+    volumes:
+      - ./minio-data:/data
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
     command: server /data --console-address ":9001"
+    networks:
+      - spark-network
+  
+  # 添加在 minio 服务之后
+  postgres:
+    image: postgres:15
+    container_name: postgres-dw
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password123
+      POSTGRES_DB: nyc_warehouse
+    ports:
+      - "5432:5432"
+    volumes:
+      # 将本地的 sql 初始化脚本映射进容器，启动时自动执行
+      - ./ex03_sql_table_creation:/docker-entrypoint-initdb.d
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       - spark-network
 
